--- a/client/website/boot.html
+++ b/client/website/boot.html
@@ -17,6 +17,8 @@
     <script src="https://npmcdn.com/@angular/platform-browser/platform-browser.umd.js"></script>
     <script src="https://npmcdn.com/@angular/platform-browser-dynamic/platform-browser-dynamic.umd.js"></script>
 
+    <script src="scripts/classes/page.class.js"></script>
+    
     <script src="scripts/components/toolbox.component.js"></script>
     <script src="scripts/components/editable.directive.js"></script>
     <script src="scripts/app_boot.js"></script>
